--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
         </li>
       </ul>
     </div>
-    <div class="block-title searchbar-found">예제 샘플</div>
+    <!-- <div class="block-title searchbar-found">예제 샘플</div>
     <div class="list components-list searchbar-found">
       <ul>
         <li>
@@ -491,34 +491,6 @@
       <ul>
         <li>Nothing found</li>
       </ul>
-    </div>
-    <div class="block-title searchbar-hide-on-search">Themes</div>
-    <div class="list links-list searchbar-hide-on-search">
-      <ul>
-        <li>
-          <a href="/./index.html?theme=ios" class="external">iOS Theme</a>
-        </li>
-        <li>
-          <a href="/./index.html?theme=md" class="external">Material (MD) Theme</a>
-        </li>
-        <li>
-          <a href="/color-themes/">Color Themes</a>
-        </li>
-      </ul>
-    </div>
-    <div class="block-title searchbar-hide-on-search">Page Loaders & Router</div>
-    <div class="list links-list searchbar-hide-on-search">
-      <ul>
-        <li>
-          <a href="/page-loader-template7/vladimir/123/about-me/1/?start=0&end=30#top">Template7 Page</a>
-        </li>
-        <li>
-          <a href="/page-loader-component/vladimir/123/about-me/1/?start=0&end=30#top">Component Page</a>
-        </li>
-        <li>
-          <a href="/load-something-that-doesnt-exist/">Default Route (404)</a>
-        </li>
-      </ul>
-    </div>
+    </div> -->
   </div>
 </div>
