--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,28 +21,14 @@
   <body>
     <div id="app">
       <div class="statusbar"></div>
-      <div class="panel panel-left panel-cover">
-        <div class="page">
-          <div class="page-content">
-            <%= yield :left %>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-right panel-reveal">
-        <div class="view view-init view-right" name="right" data-url="/">
-          <div class="page">
-            <%= yield :right %>
-          </div>
-        </div>
-      </div>
-      <div class="view view-main view-init ios-edges">
+      <div class="view view-main view-init" data-url="/">
         <div class="page" data-name="<%= "#{controller_name}-#{action_name}" %>">
-          <%= yield :navbar %>
           <%= yield %>
         </div>
       </div>
     </div>
-    <script src="/core/js/framework7.min.js"></script>
+    <script type="text/javascript" src="/dhr/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/dhr/js/framework7.min.js"></script>
     <%= render "shared/routes" %>
     <%= javascript_include_tag 'app' %>
   </body>
