마이페이지 기능 구현
.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,10 +16,10 @@
       <%= link_to '캘린더', index_posts_path %>
     </div>
     <div class="block-title">
-      <%= link_to '내 패션 모아보기', index_posts_path %>
+      <%= link_to '내 패션 모아보기', index_mypage_path %>
     </div>
     <div class="block-title">
-      <%= link_to '룩북/타임라인 조회', index_mypage_path %>
+      <%= link_to '룩북/타임라인 조회', '#' %>
     </div>
   </div>
 </div>
