--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,12 +19,7 @@
       <%= link_to '내 패션 모아보기', index_mypage_path %>
     </div>
     <div class="block-title">
-      <%= link_to '룩북/타임라인 조회', '#' %>
-    </div>
-  </div>
-  <div class="block">
-    <div class="block-title">
-      <%= link_to '검색', search_path %>
+      <%= link_to '룩북/타임라인 조회', index_lookbook_path %>
     </div>
   </div>
 </div>
