--- a/app/views/lookbook/index.html.erb
+++ b/app/views/lookbook/index.html.erb
@@ -20,6 +20,13 @@
 <div class="tabs">
   <div class="page-content tab tab-active" id="tab-1">
     <div class="block">
+      <% @my_posts.each do |p| %>
+        <% if p.image.present? %>
+          <%= image_tag "#{p.image}" %>
+        <% else %>
+          <%= image_tag "https://placehold.it/300x300" %>
+        <% end %>
+      <% end %>
     </div>
   </div>
   <!-- Second tab -->
