--- a/app/views/search/result.html.erb
+++ b/app/views/search/result.html.erb
@@ -14,7 +14,11 @@
   <div class="block">
     <div class="block-title">포스트</div>
     <div class="list media-list" id="post_div">
-      <%= render 'post_list', target_posts: @target_posts %>
+      <% if @target_posts.count < 1 %>
+        <p>검색된 결과가 없습니다</p>
+      <% else %>
+        <%= render '/diary/post_list', target_posts: @target_posts %>
+      <% end %>
     </div>
   </div>
 </div>
