search에서 search컨트롤러 -> post -> postDm으로 데이터 이동 구조 변경
- 내 패션 보여주기'에서 카테고리쪽 페이지 ui 수정
- search에서  post -> postDM으로 플로우 가지도록 변경
- 다이어리 작성 부분 (cloth 종류 설정) -> 수업때 완료

--- a/app/views/diary/index_post.html.erb
+++ b/app/views/diary/index_post.html.erb
@@ -35,7 +35,7 @@
       <i class="icon material-icons md-only">add</i>
     <% end %>
   </div>
-  <div class="list inline-labels no-hairlines-md">
+  <div class="list no-hairlines-md" style="margin: 0 auto;">
     <ul>
       <%= form_for "",url: diary_search_path, method: :get do %>
       <li class="item-content item-input">
