--- a/app/views/mypage/category.html.erb
+++ b/app/views/mypage/category.html.erb
@@ -10,30 +10,37 @@
   </div>
 </div>
 <div class="page-content">
-  <table>
-    <tr>
-      <th>원피스</th>
-      <td><%= @my_clothes["원피스"].count %></td>
-    </tr>
-    <tr>
-      <th>아우터</th>
-      <td><%= @my_clothes["아우터"].count %></td>
-    </tr>
-    <tr>
-      <th>상의</th>
-      <td><%= @my_clothes["상의"].count %></td>
-    </tr>
-    <tr>
-      <th>셔츠/블라우스</th>
-      <td><%= @my_clothes["셔츠/블라우스"].count %></td>
-    </tr>
-    <tr>
-      <th>하의</th>
-      <td><%= @my_clothes["하의"].count %></td>
-    </tr>
-    <tr>
-      <th>점프수트</th>
-      <td><%= @my_clothes["점프수트"].count %></td>
-    </tr>
-  </table>
+  <div class="block">
+    <div class="block-title">등록한 옷 현황</div>
+    <div class="data-table">
+      <table>
+        <tbody>
+          <tr>
+            <td class="label-cell">원피스</td>
+            <td class="numeric-cell"><%= @my_clothes["원피스"].count %></td>
+          </tr>
+          <tr>
+            <td class="label-cell">아우터</td>
+            <td class="numeric-cell"><%= @my_clothes["아우터"].count %></td>
+          </tr>
+          <tr>
+            <td class="label-cell">상의</td>
+            <td class="numeric-cell"><%= @my_clothes["상의"].count %></td>
+          </tr>
+          <tr>
+            <td class="label-cell">셔츠/블라우스</td>
+            <td class="numeric-cell"><%= @my_clothes["셔츠/블라우스"].count %></td>
+          </tr>
+          <tr>
+            <td class="label-cell">하의</td>
+            <td class="numeric-cell"><%= @my_clothes["하의"].count %></td>
+          </tr>
+          <tr>
+            <td class="label-cell">점프수트</td>
+            <td class="numeric-cell"><%= @my_clothes["점프수트"].count %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
