--- a/app/views/lookbook/index.html.erb
+++ b/app/views/lookbook/index.html.erb
@@ -20,49 +20,33 @@
 <div class="tabs">
   <div class="page-content tab tab-active" id="tab-1">
     <div class="block">
-      <% @my_posts.each do |p| %>
-        <% if p.image.present? %>
-          <%= image_tag "#{p.image}" %>
-        <% else %>
-          <%= image_tag "https://placehold.it/300x300" %>
+      <div class="row">
+        <% @my_posts.each do |p| %>
+          <div class="col-50" id="image-container">
+            <%= link_to show_post_path(p.id) do %>
+              <% if p.image.present? %>
+                <%= image_tag "#{p.image}" %>
+              <% else %>
+                <%= image_tag "https://placehold.it/300x300" %>
+              <% end %>
+            <% end %>
+          </div>
         <% end %>
-      <% end %>
+      </div>
     </div>
   </div>
   <!-- Second tab -->
   <div class="page-content infinite-scroll-content tab" id="tab-2">
     <div class="block card-container">
-      <%= render 'card_item' %>
-      <%= render 'card_item' %>
-      <%= render 'card_item' %>
-      <%= render 'card_item' %>
-    </div>
-    <div class="block">
-      <div class="list simple-list">
-        <ul>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
-          <li>Item 5</li>
-          <li>Item 6</li>
-          <li>Item 7</li>
-          <li>Item 8</li>
-          <li>Item 9</li>
-          <li>Item 10</li>
-          <li>Item 11</li>
-          <li>Item 12</li>
-          <li>Item 13</li>
-          <li>Item 14</li>
-          <li>Item 15</li>
-          <li>Item 16</li>
-          <li>Item 17</li>
-          <li>Item 18</li>
-          <li>Item 19</li>
-          <li>Item 20</li>
-        </ul>
-      </div>
-      <div class="preloader infinite-scroll-preloader"></div>
+      <% if @others_posts.count == 0 %>
+        <div class="block">
+          <p>다른 사람이 올린 글이 없습니다</p>
+        </div>
+      <% else %>
+        <% @others_posts.each do |p| %>
+          <%= render 'card_item' %>
+        <% end %>
+      <% end %>
     </div>
   </div>
 </div>
