--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,146 @@
     </div>
   </div>
 </div>
+<div class="toolbar tabbar toolbar-bottom-md">
+  <div class="toolbar-inner">
+    <!-- Links have "tab-link" class instead of just "link" to switch tabs -->
+    <a href="#tab-1" class="tab-link tab-link-active">캘린더</a>
+    <a href="#tab-2" class="tab-link">룩북</a>
+    <a href="#tab-3" class="tab-link">마이페이지</a>
+  </div>
+</div>
+<div class="tabs">
+  <!-- 캘린더, active -->
+  <div class="page-content tab tab-active" id="tab-1">
+    <div class="fab fab-extended fab-right-bottom color-blue">
+      <%= link_to new_post_path(picked_date: @picked_date), id: "new_post" do %>
+        <i class="icon f7-icons ios-only">add</i>
+        <i class="icon material-icons md-only">add</i>
+      <% end %>
+    </div>
+    <div class="list no-hairlines-md" style="margin: 0 auto;">
+      <ul>
+        <%= form_for "",url: diary_search_path, method: :get do %>
+        <li class="item-content item-input">
+          <div class="item-inner">
+            <div class="item-input-wrap">
+              <%= text_field_tag :search, @search_term, placeholder:"키워드를 검색하세요" %>
+              <span class="input-clear-button"></span>
+            </div>
+          </div>
+        </li>
+        <% end %>
+      </ul>
+    </div>
+
+    <%= render 'shared/inline_calendar' %>
+    <div class="block">
+      <div class="block-title">포스트</div>
+      <div class="list media-list" id="post_div">
+        <%= render 'diary/post_list', target_posts: @target_posts %>
+      </div>
+    </div>
+  </div>
+  <!-- 룩북 -->
+  <div class="page-content tab" id="tab-2">
+    <div class="toolbar tabbar">
+      <div class="toolbar-inner">
+        <!-- Links have "tab-link" class instead of just "link" to switch tabs -->
+        <a href="#closet" class="tab-link tab-link-active">Closet</a>
+        <a href="#timeline" class="tab-link">타임라인</a>
+      </div>
+    </div>
+    <!-- Tabs -->
+    <div class="tabs">
+      <div class="page-content tab tab-active" id="closet">
+        <div class="block">
+          <% @my_posts.each do |p| %>
+            <% if p.image.present? %>
+              <%= image_tag "#{p.image}" %>
+            <% else %>
+              <%= image_tag "https://placehold.it/300x300" %>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+      <!-- Second tab -->
+      <div class="page-content infinite-scroll-content tab" id="timeline">
+        <div class="block card-container">
+          <%= render 'lookbook/card_item' %>
+          <%= render 'lookbook/card_item' %>
+          <%= render 'lookbook/card_item' %>
+          <%= render 'lookbook/card_item' %>
+        </div>
+        <div class="block">
+          <div class="list simple-list">
+            <ul>
+              <li>Item 1</li>
+              <li>Item 2</li>
+              <li>Item 3</li>
+              <li>Item 4</li>
+              <li>Item 5</li>
+              <li>Item 6</li>
+              <li>Item 7</li>
+              <li>Item 8</li>
+              <li>Item 9</li>
+              <li>Item 10</li>
+              <li>Item 11</li>
+              <li>Item 12</li>
+              <li>Item 13</li>
+              <li>Item 14</li>
+              <li>Item 15</li>
+              <li>Item 16</li>
+              <li>Item 17</li>
+              <li>Item 18</li>
+              <li>Item 19</li>
+              <li>Item 20</li>
+            </ul>
+          </div>
+          <div class="preloader infinite-scroll-preloader"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- 마이페이지 -->
+  <div class="page-content tab" id="tab-3">
+    <div class="block">
+      <div class="block-title">내 패션 모아보기</div>
+      <div class="list media-list">
+        <ul>
+          <% @my_posts.each do |post| %>
+            <li>
+              <a href="#" class="item-link item-content">
+                <div class="item-media">
+                  <% if post.image.present? %>
+                    <img src="<%= post.image %>" width="80"/>
+                  <% else %>
+                    <img src="https://placehold.it/80x80" width="80"/>
+                  <% end %>
+                </div>
+                <div class="item-inner">
+                  <div class="item-title-row">
+                    <div class="item-title"><%= post.posted_at.strftime("%Y, %m월 %d일") %></div>
+                  </div>
+                  <div class="item-subtitle"><%= post.title %></div>
+                  <div class="item-text"><%= post.body %></div>
+                </div>
+              </a>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+    <div class="block">
+      <div class="block-title">카테고리 정리</div>
+      <div class="list links-list">
+        <ul>
+          <li><a href="<%= category_path %>">Category</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="page-content">
   <div class="block">
     <div class="block-title">
