좋아요 기능 추가, 퍼블리싱 작업
.

--- a/app/views/diary/new_post.html.erb
+++ b/app/views/diary/new_post.html.erb
@@ -12,7 +12,7 @@
 
 <div class="page-content">
   <div class="block">
-    <div class="block-title"><%= @picked_date %> 포스트 작성</div>
+    <div class="block-title"><%= @picked_date %> 다이어리 작성</div>
     <div class="list inline-labels no-hairlines-md">
       <%= form_for @post, url: '/diary/create_post' do |f| %>
         <%= f.hidden_field :user_id,value: current_user.id %>
