--- a/app/views/diary/_post_list.html.erb
+++ b/app/views/diary/_post_list.html.erb
@@ -7,7 +7,7 @@
             <div class="item-title"><%= post.title %></div>
             <div class="item-after"></div>
           </div>
-          <div class="item-subtitle post-date"><%= post.posted_at %></div>
+          <div class="item-subtitle post-date"><%= post.posted_at.strftime("%Y년 %m월 %d일") %></div>
           <div class="item-text"><%= post.body %></div>
         </div>
       </a>
