--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,11 @@
 <div class="navbar no-shadow">
   <div class="navbar-inner">
-    <div class="left">
-      <a href="#" class="link icon-only panel-open" data-panel="left">
-        <i class="icon material-icons">menu</i>
-      </a>
-    </div>
-    <div class="title">쇼옷</div>
+    <div class="left"> </div>
+    <div class="title" style="margin-left:170px;">쇼옷</div>
     <div class="right">
+      <%= link_to destroy_user_session_path, class:"link", method: :delete do %>
+        <i class="f7-icons">logout</i>
+      <% end %>
     </div>
   </div>
 </div>
@@ -61,51 +60,39 @@
     </div>
     <!-- Tabs -->
     <div class="tabs">
-      <div class="page-content tab tab-active" id="closet">
+      <div class="page-content tab tab-active" id="closet" style="padding-top:0px;">
         <div class="block">
-          <% @my_posts.each do |p| %>
-            <% if p.image.present? %>
-              <%= image_tag "#{p.image}" %>
+          <div class="row">
+            <% if @my_posts.count == 0 %>
+              <p>등록된 다이어리가 없습니다</p>
             <% else %>
-              <%= image_tag "https://placehold.it/300x300" %>
+              <% @my_posts.each do |p| %>
+                <div class="col-50" id="image-container">
+                  <%= link_to show_post_path(p.id) do %>
+                    <% if p.image.present? %>
+                      <%= image_tag "#{p.image}" %>
+                    <% else %>
+                      <%= image_tag "https://placehold.it/300x300" %>
+                    <% end %>
+                  <% end %>
+                </div>
+              <% end %>
             <% end %>
-          <% end %>
+          </div>
         </div>
       </div>
       <!-- Second tab -->
-      <div class="page-content infinite-scroll-content tab" id="timeline">
+      <div class="page-content infinite-scroll-content tab" id="timeline" style="padding-top:0px;">
         <div class="block card-container">
-          <%= render 'lookbook/card_item' %>
-          <%= render 'lookbook/card_item' %>
-          <%= render 'lookbook/card_item' %>
-          <%= render 'lookbook/card_item' %>
-        </div>
-        <div class="block">
-          <div class="list simple-list">
-            <ul>
-              <li>Item 1</li>
-              <li>Item 2</li>
-              <li>Item 3</li>
-              <li>Item 4</li>
-              <li>Item 5</li>
-              <li>Item 6</li>
-              <li>Item 7</li>
-              <li>Item 8</li>
-              <li>Item 9</li>
-              <li>Item 10</li>
-              <li>Item 11</li>
-              <li>Item 12</li>
-              <li>Item 13</li>
-              <li>Item 14</li>
-              <li>Item 15</li>
-              <li>Item 16</li>
-              <li>Item 17</li>
-              <li>Item 18</li>
-              <li>Item 19</li>
-              <li>Item 20</li>
-            </ul>
-          </div>
-          <div class="preloader infinite-scroll-preloader"></div>
+          <% if @others_posts.count == 0 %>
+            <div class="block">
+              <p>다른 사람이 올린 글이 없습니다</p>
+            </div>
+          <% else %>
+            <div id="others-lookbook">
+              <%= render 'lookbook/card_item', posts: @others_posts %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
@@ -115,28 +102,34 @@
     <div class="block">
       <div class="block-title">내 패션 모아보기</div>
       <div class="list media-list">
-        <ul>
-          <% @my_posts.each do |post| %>
-            <li>
-              <a href="#" class="item-link item-content">
-                <div class="item-media">
-                  <% if post.image.present? %>
-                    <img src="<%= post.image %>" width="80"/>
-                  <% else %>
-                    <img src="https://placehold.it/80x80" width="80"/>
-                  <% end %>
-                </div>
-                <div class="item-inner">
-                  <div class="item-title-row">
-                    <div class="item-title"><%= post.posted_at.strftime("%Y, %m월 %d일") %></div>
+        <% if @my_posts.count == 0 %>
+          <div class="block">
+            <p>등록된 다이어리가 없습니다</p>
+          </div>
+        <% else %>
+          <ul>
+            <% @my_posts.each do |post| %>
+              <li>
+                <a href="#" class="item-link item-content">
+                  <div class="item-media">
+                    <% if post.image.present? %>
+                      <img src="<%= post.image %>" width="80"/>
+                    <% else %>
+                      <img src="https://placehold.it/80x80" width="80"/>
+                    <% end %>
                   </div>
-                  <div class="item-subtitle"><%= post.title %></div>
-                  <div class="item-text"><%= post.body %></div>
-                </div>
-              </a>
-            </li>
-          <% end %>
-        </ul>
+                  <div class="item-inner">
+                    <div class="item-title-row">
+                      <div class="item-title"><%= post.posted_at.strftime("%Y, %m월 %d일") %></div>
+                    </div>
+                    <div class="item-subtitle"><%= post.title %></div>
+                    <div class="item-text"><%= post.body %></div>
+                  </div>
+                </a>
+              </li>
+            <% end %>
+          </ul>
+        <% end %>
       </div>
     </div>
     <div class="block">
