--- a/app/views/lookbook/_card_item.html.erb
+++ b/app/views/lookbook/_card_item.html.erb
@@ -1,15 +1,26 @@
-<div class="card demo-facebook-card">
-  <div class="card-header">
-    <!-- <div class="demo-facebook-avatar"><img src="http://lorempixel.com/68/68/people/1/" width="34" height="34"/></div> -->
-    <div class="demo-facebook-name" style="margin-left:0px;">John Doe</div>
-    <div class="demo-facebook-date" style="margin-left:0px;">Monday at 2:15 PM</div>
+<% posts.each do |post| %>
+  <div class="card demo-facebook-card">
+    <div class="card-header">
+      <!-- <div class="demo-facebook-avatar"><img src="http://lorempixel.com/68/68/people/1/" width="34" height="34"/></div> -->
+      <div class="demo-facebook-name" style="margin-left:0px;"><%= post.title %></div>
+      <div class="demo-facebook-date" style="margin-left:0px;"><%= post.posted_at.strftime("%Y, %m월 %d일") %></div>
+      <div class="demo-facebook-date" style="margin-left:0px;"><%= User.find(post.user_id).email %></div>
+    </div>
+    <div class="card-content card-content-padding">
+      <p><%= simple_format post.body %></p>
+      <% if post.image.present? %>
+        <%= image_tag "#{post.image}" %>
+      <% else %>
+        <%= image_tag "https://placehold.it/300x300" %>
+      <% end %>
+      <p class="likes">좋아요 <%= UserPost.where(post_id: post.id).count %></p>
+    </div>
+    <div class="card-footer">
+      <% if UserPost.where(post_id: post.id, user_id: current_user.id).count > 0 %>
+        <%= link_to "좋아요 취소", like_lookbook_path(post.id), remote: true %>
+      <% else %>
+        <%= link_to "좋아요", like_lookbook_path(post.id), remote: true %>
+      <% end %>
+    </div>
   </div>
-  <div class="card-content card-content-padding">
-    <p>What a nice photo i took yesterday!</p>
-    <img src="http://placehold.it/300x300" width="100%"/>
-    <p class="likes">Likes: 112</p>
-  </div>
-  <div class="card-footer">
-    <a href="#" class="link">Like</a>
-  </div>
-</div>
+<% end %>
