--- a/app/views/recommend/_post_list.html.erb
+++ b/app/views/recommend/_post_list.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <% post = @target_posts %>
+  <% @target_posts.each do |post| %>
     <li>
       <a href="/diary/show_post/<%= post.id %>" class="item-link item-content">
         <div class="item-inner">
