--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -141,8 +141,11 @@
       </div>
     </div>
     <div class="block">
-      <div class="block-title">
-        <%= link_to '추천', recommend_result_path %>
+      <div class="block-title">추천</div>
+      <div class="list links-list">
+        <ul>
+          <li><a href="<%= recommend_result_path %>">추천 결과보기</a></li>
+        </ul>
       </div>
     </div>
   </div>
