--- a/app/views/recommend/_post_list.html.erb
+++ b/app/views/recommend/_post_list.html.erb
@@ -1,15 +1,22 @@
 <ul>
-  <% @target_posts.each do |post| %>
     <li>
-      <a href="/diary/show_post/<%= post.id %>" class="item-link item-content">
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title"><%= post.title %></div>
-            <div class="item-after"></div>
+      <div class="block">
+          <div class="row">
+            <% if @target_posts.count == 0 %>
+              <p>등록된 다이어리가 없습니다</p>
+            <% else %>
+              <% @target_posts.each do |p| %>
+                <div class="col-50" id="image-container">
+                  <%= link_to show_post_path(p.id) do %>
+                    <% if p.image.present? %>
+                      <%= image_tag "#{p.image}" %>
+                    <% else %>
+                      <%= image_tag "https://placehold.it/300x300" %>
+                    <% end %>
+                  <% end %>
+                </div>
+              <% end %>
+            <% end %>
           </div>
-          <div class="item-subtitle"><%= post.posted_at %></div>
-          <div class="item-text"><%= post.body %></div>
-        </div>
-      </a>
     </li>
 </ul>
